# minceraft

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: VAO.cpp.FCADB8E23B0B260B.idx  VAO.h.6ADA933D3B47FB98.idx  VBO.cpp.14B59B5155A82CF1.idx  VBO.h.3B21538FB8631939.idx  camera.cpp.010CFFCB703AE573.idx  camera.h.C923B80603C2542A.idx  chunk.cpp.32892DC6A5EC1CD7.idx  chunk.h.66E278A1B8864FBF.idx  common.h.72E4479D62C37185.idx  cube.h.0EEB178C9E636053.idx  gl.c.B7C561AFE219ECFC.idx  gl.h.22F6512E2AA1A74A.idx  khrplatform.h.DF566F6B0E123337.idx  main.cpp.48135072DD502BCB.idx  shader.cpp.9109BB9A7258DB0B.idx  shader.h.1B18D847FD0FA795.idx  texture.cpp.B59F47E347FBA3E7.idx  texture.h.95AB0E0C6FF84FBA.idx
res/shaders/: frag.glsl  vert.glsl
src/: VAO.cpp  VAO.h  VBO.cpp  VBO.h  camera.cpp  camera.h  chunk.cpp  chunk.h  common.h  cube.h  main.cpp  shader.cpp  shader.h  texture.cpp  texture.h
